Fixing Firefox 48 & Safari layout issues.

--- a/src/services/preact-canvas/components/win/style.css
+++ b/src/services/preact-canvas/components/win/style.css
@@ -19,8 +19,6 @@
 }
 
 .win-inner {
-  display: flex;
-  flex-flow: column;
   width: 100%;
   box-sizing: border-box;
   max-width: 500px;
@@ -47,14 +45,8 @@
   animation: spinCCW 20s linear infinite;
   transform: rotate(45deg);
   filter: drop-shadow(0 0 10px #fff);
-  margin-bottom: 0.8rem;
+  margin-bottom: 2rem;
   margin-top: 1.5rem;
-}
-
-@media (min-width: 320px) {
-  .win-square {
-    margin-top: 0;
-  }
 }
 
 .win-square::after {
